bison_code.output
Terminals unused in grammar

    KW_Const


State 42 conflicts: 2 shift/reduce
State 43 conflicts: 2 shift/reduce
State 44 conflicts: 2 shift/reduce
State 45 conflicts: 2 shift/reduce
State 46 conflicts: 2 shift/reduce
State 53 conflicts: 2 shift/reduce


Grammar

    0 $accept: Prog $end

    1 Prog: Declarations_Liste Instructions_Liste

    2 Declarations_Liste: ε
    3                   | VarInit Declarations_Liste
    4                   | FuncDeclaration Declarations_Liste
    5                   | ProDeclaration Declarations_Liste
    6                   | VarDeclaration Declarations_Liste

    7 VarDeclaration: Type G_IDF ';'

    8 FuncDeclaration: KW_Function Type IDF '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'

    9 ProDeclaration: KW_Void IDF '(' Parameter_Liste ')' '{' VarInit Instructions '}'

   10 Parameter_Liste: ε
   11                | Type IDF ',' Parameter_Liste

   12 Return: KW_Return INT ';'
   13       | KW_Return FLOAT ';'
   14       | KW_Return BOOL ';'
   15       | KW_Return IDF ';'

   16 VarInit: Type Assignment

   17 Assignment: G_IDF SC_ASSIGN INT ';'
   18           | G_IDF SC_ASSIGN FLOAT ';'
   19           | G_IDF SC_ASSIGN BOOL ';'

   20 G_IDF: G_IDF ',' IDF
   21      | IDF

   22 Type: KW_int
   23     | KW_float
   24     | KW_boolean

   25 Instructions_Liste: KW_BEGIN Instructions KW_END

   26 Instructions: ε
   27             | Assignment Instructions
   28             | For Instructions
   29             | If Instructions
   30             | Div Instructions
   31             | Mult Instructions
   32             | Add Instructions
   33             | Sub Instructions
   34             | Mod Instructions
   35             | Increment ';' Instructions
   36             | Decrement ';' Instructions
   37             | FuncCall Instructions
   38             | ProCall Instructions

   39 ArithmeticOp: UnaryPlus
   40             | UnaryMinus
   41             | Div
   42             | Mult
   43             | Add
   44             | Sub
   45             | Mod

   46 UnaryPlus: '+' OpSide

   47 UnaryMinus: '-' OpSide

   48 Div: OpSide '/' OpSide

   49 Mult: OpSide '*' OpSide

   50 Add: OpSide '+' OpSide

   51 Sub: OpSide '-' OpSide

   52 Mod: OpSide '%' OpSide

   53 Increment: IDF SC_INCR

   54 Decrement: IDF SC_DECR

   55 RelationalOp: EqualityOp
   56             | InequalityOp

   57 EqualityOp: SC_EQUALS
   58           | SC_DIFF

   59 InequalityOp: SC_LOE
   60             | SC_GOE
   61             | '>'
   62             | '<'

   63 OpSide: IDF
   64       | Num
   65       | ArithmeticOp
   66       | FuncCall

   67 Condition: '(' Expression ')'

   68 Expression: OpSide RelationalOp OpSide

   69 Num: INT
   70    | FLOAT

   71 For: KW_For '(' IDF SC_ASSIGN INT ';' Expression ';' Increment ')' '{' Instructions '}'

   72 If: KW_If Condition '{' Instructions '}'
   73   | KW_If Condition '{' Instructions '}' KW_Else '{' Instructions '}'

   74 FuncCall: KW_Fc IDF '(' Args_Liste ')' ';'

   75 ProCall: KW_Pc IDF '(' Args_Liste ')' ';'

   76 Args_Liste: ε
   77           | G_IDF


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 52
    '(' (40) 8 9 67 71 74 75
    ')' (41) 8 9 67 71 74 75
    '*' (42) 49
    '+' (43) 46 50
    ',' (44) 11 20
    '-' (45) 47 51
    '/' (47) 48
    ';' (59) 7 12 13 14 15 17 18 19 35 36 71 74 75
    '<' (60) 62
    '>' (62) 61
    '{' (123) 8 9 71 72 73
    '}' (125) 8 9 71 72 73
    error (256)
    INT <integer> (258) 12 17 69 71
    FLOAT <floatV> (259) 13 18 70
    BOOL <bool> (260) 14 19
    IDF <string> (261) 8 9 11 15 20 21 53 54 63 71 74 75
    SC_ASSIGN <specialChar> (262) 17 18 19 71
    SC_EQUALS <specialChar> (263) 57
    SC_DIFF <specialChar> (264) 58
    SC_LOE <specialChar> (265) 59
    SC_GOE <specialChar> (266) 60
    SC_INCR (267) 53
    SC_DECR (268) 54
    KW_int <string> (269) 22
    KW_float <string> (270) 23
    KW_boolean <string> (271) 24
    KW_For <string> (272) 71
    KW_If <string> (273) 72 73
    KW_Else <string> (274) 73
    KW_BEGIN <string> (275) 25
    KW_END <string> (276) 25
    KW_Return (277) 12 13 14 15
    KW_Const (278)
    KW_Void (279) 9
    KW_Pc (280) 75
    KW_Fc (281) 74
    KW_Function (282) 8


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    Prog (42)
        on left: 1
        on right: 0
    Declarations_Liste (43)
        on left: 2 3 4 5 6
        on right: 1 3 4 5 6
    VarDeclaration (44)
        on left: 7
        on right: 6
    FuncDeclaration (45)
        on left: 8
        on right: 4
    ProDeclaration (46)
        on left: 9
        on right: 5
    Parameter_Liste (47)
        on left: 10 11
        on right: 8 9 11
    Return (48)
        on left: 12 13 14 15
        on right: 8
    VarInit (49)
        on left: 16
        on right: 3 8 9
    Assignment (50)
        on left: 17 18 19
        on right: 16 27
    G_IDF (51)
        on left: 20 21
        on right: 7 17 18 19 20 77
    Type (52)
        on left: 22 23 24
        on right: 7 8 11 16
    Instructions_Liste (53)
        on left: 25
        on right: 1
    Instructions (54)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 8 9 25 27 28 29 30 31 32 33 34 35 36 37 38 71 72 73
    ArithmeticOp (55)
        on left: 39 40 41 42 43 44 45
        on right: 65
    UnaryPlus (56)
        on left: 46
        on right: 39
    UnaryMinus (57)
        on left: 47
        on right: 40
    Div (58)
        on left: 48
        on right: 30 41
    Mult (59)
        on left: 49
        on right: 31 42
    Add (60)
        on left: 50
        on right: 32 43
    Sub (61)
        on left: 51
        on right: 33 44
    Mod (62)
        on left: 52
        on right: 34 45
    Increment (63)
        on left: 53
        on right: 35 71
    Decrement (64)
        on left: 54
        on right: 36
    RelationalOp (65)
        on left: 55 56
        on right: 68
    EqualityOp (66)
        on left: 57 58
        on right: 55
    InequalityOp (67)
        on left: 59 60 61 62
        on right: 56
    OpSide (68)
        on left: 63 64 65 66
        on right: 46 47 48 49 50 51 52 68
    Condition (69)
        on left: 67
        on right: 72 73
    Expression (70)
        on left: 68
        on right: 67 71
    Num (71)
        on left: 69 70
        on right: 64
    For (72)
        on left: 71
        on right: 28
    If (73)
        on left: 72 73
        on right: 29
    FuncCall (74)
        on left: 74
        on right: 37 66
    ProCall (75)
        on left: 75
        on right: 38
    Args_Liste (76)
        on left: 76 77
        on right: 74 75


State 0

    0 $accept: • Prog $end
    1 Prog: • Declarations_Liste Instructions_Liste
    2 Declarations_Liste: ε •  [KW_BEGIN]
    3                   | • VarInit Declarations_Liste
    4                   | • FuncDeclaration Declarations_Liste
    5                   | • ProDeclaration Declarations_Liste
    6                   | • VarDeclaration Declarations_Liste
    7 VarDeclaration: • Type G_IDF ';'
    8 FuncDeclaration: • KW_Function Type IDF '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'
    9 ProDeclaration: • KW_Void IDF '(' Parameter_Liste ')' '{' VarInit Instructions '}'
   16 VarInit: • Type Assignment
   22 Type: • KW_int
   23     | • KW_float
   24     | • KW_boolean

    KW_int       shift, and go to state 1
    KW_float     shift, and go to state 2
    KW_boolean   shift, and go to state 3
    KW_Void      shift, and go to state 4
    KW_Function  shift, and go to state 5

    $default  reduce using rule 2 (Declarations_Liste)

    Prog                go to state 6
    Declarations_Liste  go to state 7
    VarDeclaration      go to state 8
    FuncDeclaration     go to state 9
    ProDeclaration      go to state 10
    VarInit             go to state 11
    Type                go to state 12


State 1

   22 Type: KW_int •

    $default  reduce using rule 22 (Type)


State 2

   23 Type: KW_float •

    $default  reduce using rule 23 (Type)


State 3

   24 Type: KW_boolean •

    $default  reduce using rule 24 (Type)


State 4

    9 ProDeclaration: KW_Void • IDF '(' Parameter_Liste ')' '{' VarInit Instructions '}'

    IDF  shift, and go to state 13


State 5

    8 FuncDeclaration: KW_Function • Type IDF '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'
   22 Type: • KW_int
   23     | • KW_float
   24     | • KW_boolean

    KW_int      shift, and go to state 1
    KW_float    shift, and go to state 2
    KW_boolean  shift, and go to state 3

    Type  go to state 14


State 6

    0 $accept: Prog • $end

    $end  shift, and go to state 15


State 7

    1 Prog: Declarations_Liste • Instructions_Liste
   25 Instructions_Liste: • KW_BEGIN Instructions KW_END

    KW_BEGIN  shift, and go to state 16

    Instructions_Liste  go to state 17


State 8

    2 Declarations_Liste: ε •  [KW_BEGIN]
    3                   | • VarInit Declarations_Liste
    4                   | • FuncDeclaration Declarations_Liste
    5                   | • ProDeclaration Declarations_Liste
    6                   | • VarDeclaration Declarations_Liste
    6                   | VarDeclaration • Declarations_Liste
    7 VarDeclaration: • Type G_IDF ';'
    8 FuncDeclaration: • KW_Function Type IDF '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'
    9 ProDeclaration: • KW_Void IDF '(' Parameter_Liste ')' '{' VarInit Instructions '}'
   16 VarInit: • Type Assignment
   22 Type: • KW_int
   23     | • KW_float
   24     | • KW_boolean

    KW_int       shift, and go to state 1
    KW_float     shift, and go to state 2
    KW_boolean   shift, and go to state 3
    KW_Void      shift, and go to state 4
    KW_Function  shift, and go to state 5

    $default  reduce using rule 2 (Declarations_Liste)

    Declarations_Liste  go to state 18
    VarDeclaration      go to state 8
    FuncDeclaration     go to state 9
    ProDeclaration      go to state 10
    VarInit             go to state 11
    Type                go to state 12


State 9

    2 Declarations_Liste: ε •  [KW_BEGIN]
    3                   | • VarInit Declarations_Liste
    4                   | • FuncDeclaration Declarations_Liste
    4                   | FuncDeclaration • Declarations_Liste
    5                   | • ProDeclaration Declarations_Liste
    6                   | • VarDeclaration Declarations_Liste
    7 VarDeclaration: • Type G_IDF ';'
    8 FuncDeclaration: • KW_Function Type IDF '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'
    9 ProDeclaration: • KW_Void IDF '(' Parameter_Liste ')' '{' VarInit Instructions '}'
   16 VarInit: • Type Assignment
   22 Type: • KW_int
   23     | • KW_float
   24     | • KW_boolean

    KW_int       shift, and go to state 1
    KW_float     shift, and go to state 2
    KW_boolean   shift, and go to state 3
    KW_Void      shift, and go to state 4
    KW_Function  shift, and go to state 5

    $default  reduce using rule 2 (Declarations_Liste)

    Declarations_Liste  go to state 19
    VarDeclaration      go to state 8
    FuncDeclaration     go to state 9
    ProDeclaration      go to state 10
    VarInit             go to state 11
    Type                go to state 12


State 10

    2 Declarations_Liste: ε •  [KW_BEGIN]
    3                   | • VarInit Declarations_Liste
    4                   | • FuncDeclaration Declarations_Liste
    5                   | • ProDeclaration Declarations_Liste
    5                   | ProDeclaration • Declarations_Liste
    6                   | • VarDeclaration Declarations_Liste
    7 VarDeclaration: • Type G_IDF ';'
    8 FuncDeclaration: • KW_Function Type IDF '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'
    9 ProDeclaration: • KW_Void IDF '(' Parameter_Liste ')' '{' VarInit Instructions '}'
   16 VarInit: • Type Assignment
   22 Type: • KW_int
   23     | • KW_float
   24     | • KW_boolean

    KW_int       shift, and go to state 1
    KW_float     shift, and go to state 2
    KW_boolean   shift, and go to state 3
    KW_Void      shift, and go to state 4
    KW_Function  shift, and go to state 5

    $default  reduce using rule 2 (Declarations_Liste)

    Declarations_Liste  go to state 20
    VarDeclaration      go to state 8
    FuncDeclaration     go to state 9
    ProDeclaration      go to state 10
    VarInit             go to state 11
    Type                go to state 12


State 11

    2 Declarations_Liste: ε •  [KW_BEGIN]
    3                   | • VarInit Declarations_Liste
    3                   | VarInit • Declarations_Liste
    4                   | • FuncDeclaration Declarations_Liste
    5                   | • ProDeclaration Declarations_Liste
    6                   | • VarDeclaration Declarations_Liste
    7 VarDeclaration: • Type G_IDF ';'
    8 FuncDeclaration: • KW_Function Type IDF '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'
    9 ProDeclaration: • KW_Void IDF '(' Parameter_Liste ')' '{' VarInit Instructions '}'
   16 VarInit: • Type Assignment
   22 Type: • KW_int
   23     | • KW_float
   24     | • KW_boolean

    KW_int       shift, and go to state 1
    KW_float     shift, and go to state 2
    KW_boolean   shift, and go to state 3
    KW_Void      shift, and go to state 4
    KW_Function  shift, and go to state 5

    $default  reduce using rule 2 (Declarations_Liste)

    Declarations_Liste  go to state 21
    VarDeclaration      go to state 8
    FuncDeclaration     go to state 9
    ProDeclaration      go to state 10
    VarInit             go to state 11
    Type                go to state 12


State 12

    7 VarDeclaration: Type • G_IDF ';'
   16 VarInit: Type • Assignment
   17 Assignment: • G_IDF SC_ASSIGN INT ';'
   18           | • G_IDF SC_ASSIGN FLOAT ';'
   19           | • G_IDF SC_ASSIGN BOOL ';'
   20 G_IDF: • G_IDF ',' IDF
   21      | • IDF

    IDF  shift, and go to state 22

    Assignment  go to state 23
    G_IDF       go to state 24


State 13

    9 ProDeclaration: KW_Void IDF • '(' Parameter_Liste ')' '{' VarInit Instructions '}'

    '('  shift, and go to state 25


State 14

    8 FuncDeclaration: KW_Function Type • IDF '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'

    IDF  shift, and go to state 26


State 15

    0 $accept: Prog $end •

    $default  accept


State 16

   17 Assignment: • G_IDF SC_ASSIGN INT ';'
   18           | • G_IDF SC_ASSIGN FLOAT ';'
   19           | • G_IDF SC_ASSIGN BOOL ';'
   20 G_IDF: • G_IDF ',' IDF
   21      | • IDF
   25 Instructions_Liste: KW_BEGIN • Instructions KW_END
   26 Instructions: ε •  [KW_END]
   27             | • Assignment Instructions
   28             | • For Instructions
   29             | • If Instructions
   30             | • Div Instructions
   31             | • Mult Instructions
   32             | • Add Instructions
   33             | • Sub Instructions
   34             | • Mod Instructions
   35             | • Increment ';' Instructions
   36             | • Decrement ';' Instructions
   37             | • FuncCall Instructions
   38             | • ProCall Instructions
   39 ArithmeticOp: • UnaryPlus
   40             | • UnaryMinus
   41             | • Div
   42             | • Mult
   43             | • Add
   44             | • Sub
   45             | • Mod
   46 UnaryPlus: • '+' OpSide
   47 UnaryMinus: • '-' OpSide
   48 Div: • OpSide '/' OpSide
   49 Mult: • OpSide '*' OpSide
   50 Add: • OpSide '+' OpSide
   51 Sub: • OpSide '-' OpSide
   52 Mod: • OpSide '%' OpSide
   53 Increment: • IDF SC_INCR
   54 Decrement: • IDF SC_DECR
   63 OpSide: • IDF
   64       | • Num
   65       | • ArithmeticOp
   66       | • FuncCall
   69 Num: • INT
   70    | • FLOAT
   71 For: • KW_For '(' IDF SC_ASSIGN INT ';' Expression ';' Increment ')' '{' Instructions '}'
   72 If: • KW_If Condition '{' Instructions '}'
   73   | • KW_If Condition '{' Instructions '}' KW_Else '{' Instructions '}'
   74 FuncCall: • KW_Fc IDF '(' Args_Liste ')' ';'
   75 ProCall: • KW_Pc IDF '(' Args_Liste ')' ';'

    INT     shift, and go to state 27
    FLOAT   shift, and go to state 28
    IDF     shift, and go to state 29
    KW_For  shift, and go to state 30
    KW_If   shift, and go to state 31
    KW_Pc   shift, and go to state 32
    KW_Fc   shift, and go to state 33
    '+'     shift, and go to state 34
    '-'     shift, and go to state 35

    $default  reduce using rule 26 (Instructions)

    Assignment    go to state 36
    G_IDF         go to state 37
    Instructions  go to state 38
    ArithmeticOp  go to state 39
    UnaryPlus     go to state 40
    UnaryMinus    go to state 41
    Div           go to state 42
    Mult          go to state 43
    Add           go to state 44
    Sub           go to state 45
    Mod           go to state 46
    Increment     go to state 47
    Decrement     go to state 48
    OpSide        go to state 49
    Num           go to state 50
    For           go to state 51
    If            go to state 52
    FuncCall      go to state 53
    ProCall       go to state 54


State 17

    1 Prog: Declarations_Liste Instructions_Liste •

    $default  reduce using rule 1 (Prog)


State 18

    6 Declarations_Liste: VarDeclaration Declarations_Liste •

    $default  reduce using rule 6 (Declarations_Liste)


State 19

    4 Declarations_Liste: FuncDeclaration Declarations_Liste •

    $default  reduce using rule 4 (Declarations_Liste)


State 20

    5 Declarations_Liste: ProDeclaration Declarations_Liste •

    $default  reduce using rule 5 (Declarations_Liste)


State 21

    3 Declarations_Liste: VarInit Declarations_Liste •

    $default  reduce using rule 3 (Declarations_Liste)


State 22

   21 G_IDF: IDF •

    $default  reduce using rule 21 (G_IDF)


State 23

   16 VarInit: Type Assignment •

    $default  reduce using rule 16 (VarInit)


State 24

    7 VarDeclaration: Type G_IDF • ';'
   17 Assignment: G_IDF • SC_ASSIGN INT ';'
   18           | G_IDF • SC_ASSIGN FLOAT ';'
   19           | G_IDF • SC_ASSIGN BOOL ';'
   20 G_IDF: G_IDF • ',' IDF

    SC_ASSIGN  shift, and go to state 55
    ';'        shift, and go to state 56
    ','        shift, and go to state 57


State 25

    9 ProDeclaration: KW_Void IDF '(' • Parameter_Liste ')' '{' VarInit Instructions '}'
   10 Parameter_Liste: ε •  [')']
   11                | • Type IDF ',' Parameter_Liste
   22 Type: • KW_int
   23     | • KW_float
   24     | • KW_boolean

    KW_int      shift, and go to state 1
    KW_float    shift, and go to state 2
    KW_boolean  shift, and go to state 3

    $default  reduce using rule 10 (Parameter_Liste)

    Parameter_Liste  go to state 58
    Type             go to state 59


State 26

    8 FuncDeclaration: KW_Function Type IDF • '(' Parameter_Liste ')' '{' VarInit Instructions Return '}'

    '('  shift, and go to state 60


State 27

   69 Num: INT •

    $default  reduce using rule 69 (Num)


State 28

   70 Num: FLOAT •

    $default  reduce using rule 70 (Num)


State 29

   21 G_IDF: IDF •  [SC_ASSIGN, ',']
   53 Increment: IDF • SC_INCR
   54 Decrement: IDF • SC_DECR
   63 OpSide: IDF •  ['+', '-', '*', '/', '%']

    SC_INCR  shift, and go to state 61
    SC_DECR  shift, and go to state 62

    SC_ASSIGN  reduce using rule 21 (G_IDF)
    ','        reduce using rule 21 (G_IDF)
    $default   reduce using rule 63 (OpSide)


State 30

   71 For: KW_For • '(' IDF SC_ASSIGN INT ';' Expression ';' Increment ')' '{' Instructions '}'

    '('  shift, and go to state 63


State 31

   67 Condition: • '(' Expression ')'
   72 If: KW_If • Condition '{' Instructions '}'
   73   | KW_If • Condition '{' Instructions '}' KW_Else '{' Instructions '}'

    '('  shift, and go to state 64

    Condition  go to state 65


State 32

   75 ProCall: KW_Pc • IDF '(' Args_Liste ')' ';'

    IDF  shift, and go to state 66


State 33

   74 FuncCall: KW_Fc • IDF '(' Args_Liste ')' ';'

    IDF  shift, and go to state 67


State 34

   39 ArithmeticOp: • UnaryPlus
   40             | • UnaryMinus
   41             | • Div
   42             | • Mult
   43             | • Add
   44             | • Sub
   45             | • Mod
   46 UnaryPlus: • '+' OpSide
   46          | '+' • OpSide
   47 UnaryMinus: • '-' OpSide
   48 Div: • OpSide '/' OpSide
   49 Mult: • OpSide '*' OpSide
   50 Add: • OpSide '+' OpSide
   51 Sub: • OpSide '-' OpSide
   52 Mod: • OpSide '%' OpSide
   63 OpSide: • IDF
   64       | • Num
   65       | • ArithmeticOp
   66       | • FuncCall
   69 Num: • INT
   70    | • FLOAT
   74 FuncCall: • KW_Fc IDF '(' Args_Liste ')' ';'

    INT    shift, and go to state 27
    FLOAT  shift, and go to state 28
    IDF    shift, and go to state 68
    KW_Fc  shift, and go to state 33
    '+'    shift, and go to state 34
    '-'    shift, and go to state 35

    ArithmeticOp  go to state 39
    UnaryPlus     go to state 40
    UnaryMinus    go to state 41
    Div           go to state 69
    Mult          go to state 70
    Add           go to state 71
    Sub           go to state 72
    Mod           go to state 73
    OpSide        go to state 74
    Num           go to state 50
    FuncCall      go to state 75


State 35

   39 ArithmeticOp: • UnaryPlus
   40             | • UnaryMinus
   41             | • Div
   42             | • Mult
   43             | • Add
   44             | • Sub
   45             | • Mod
   46 UnaryPlus: • '+' OpSide
   47 UnaryMinus: • '-' OpSide
   47           | '-' • OpSide
   48 Div: • OpSide '/' OpSide
   49 Mult: • OpSide '*' OpSide
   50 Add: • OpSide '+' OpSide
   51 Sub: • OpSide '-' OpSide
   52 Mod: • OpSide '%' OpSide
   63 OpSide: • IDF
   64       | • Num
   65       | • ArithmeticOp
   66       | • FuncCall
   69 Num: • INT
   70    | • FLOAT
   74 FuncCall: • KW_Fc IDF '(' Args_Liste ')' ';'

    INT    shift, and go to state 27
    FLOAT  shift, and go to state 28
    IDF    shift, and go to state 68
    KW_Fc  shift, and go to state 33
    '+'    shift, and go to state 34
    '-'    shift, and go to state 35

    ArithmeticOp  go to state 39
    UnaryPlus     go to state 40
    UnaryMinus    go to state 41
    Div           go to state 69
    Mult          go to state 70
    Add           go to state 71
    Sub           go to state 72
    Mod           go to state 73
    OpSide        go to state 76
    Num           go to state 50
    FuncCall      go to state 75


State 36

   17 Assignment: • G_IDF SC_ASSIGN INT ';'
   18           | • G_IDF SC_ASSIGN FLOAT ';'
   19           | • G_IDF SC_ASSIGN BOOL ';'
   20 G_IDF: • G_IDF ',' IDF
   21      | • IDF
   26 Instructions: ε •  [KW_END, KW_Return, '}']
   27             | • Assignment Instructions
   27             | Assignment • Instructions
   28             | • For Instructions
   29             | • If Instructions
   30             | • Div Instructions
   31             | • Mult Instructions
   32             | • Add Instructions
   33             | • Sub Instructions
   34             | • Mod Instructions
   35             | • Increment ';' Instructions
   36             | • Decrement ';' Instructions
   37             | • FuncCall Instructions
   38             | • ProCall Instructions
   39 ArithmeticOp: • UnaryPlus
   40             | • UnaryMinus
   41             | • Div
   42             | • Mult
   43             | • Add
   44             | • Sub
   45             | • Mod
   46 UnaryPlus: • '+' OpSide
   47 UnaryMinus: • '-' OpSide
   48 Div: • OpSide '/' OpSide
   49 Mult: • OpSide '*' OpSide
   50 Add: • OpSide '+' OpSide
   51 Sub: • OpSide '-' OpSide
   52 Mod: • OpSide '%' OpSide
   53 Increment: • IDF SC_INCR
   54 Decrement: • IDF SC_DECR
   63 OpSide: • IDF
   64       | • Num
   65       | • ArithmeticOp
   66       | • FuncCall
   69 Num: • INT
   70    | • FLOAT
   71 For: • KW_For '(' IDF SC_ASSIGN INT ';' Expression ';' Increment ')' '{' Instructions '}'
   72 If: • KW_If Condition '{' Instructions '}'
   73   | • KW_If Condition '{' Instructions '}' KW_Else '{' Instructions '}'
   74 FuncCall: • KW_Fc IDF '(' Args_Liste ')' ';'
   75 ProCall: • KW_Pc IDF '(' Args_Liste ')' ';'

    INT     shift, and go to state 27
    FLOAT   shift, and go to state 28
    IDF     shift, and go to state 29
    KW_For  shift, and go to state 30
    KW_If   shift, and go to state 31
    KW_Pc   shift, and go to state 32
    KW_Fc   shift, and go to state 33
    '+'     shift, and go to state 34
    '-'     shift, and go to state 35

    $default  reduce using rule 26 (Instructions)

    Assignment    go to state 36
    G_IDF         go to state 37
    Instructions  go to state 77
    ArithmeticOp  go to state 39
    UnaryPlus     go to state 40
    UnaryMinus    go to state 41
    Div           go to state 42
    Mult          go to state 43
    Add           go to state 44
    Sub           go to state 45
    Mod           go to state 46
    Increment     go to state 47
    Decrement     go to state 48
    OpSide        go to state 49
    Num           go to state 50
    For           go to state 51
    If            go to state 52
    FuncCall      go to state 53
    ProCall       go to state 54


State 37

   17 Assignment: G_IDF • SC_ASSIGN INT ';'
   18           | G_IDF • SC_ASSIGN FLOAT ';'
   19           | G_IDF • SC_ASSIGN BOOL ';'
   20 G_IDF: G_IDF • ',' IDF

    SC_ASSIGN  shift, and go to state 55
    ','        shift, and go to state 57


State 38

   25 Instructions_Liste: KW_BEGIN Instructions • KW_END

    KW_END  shift, and go to state 78


State 39

   65 OpSide: ArithmeticOp •

    $default  reduce using rule 65 (OpSide)


State 40

   39 ArithmeticOp: UnaryPlus •

    $default  reduce using rule 39 (ArithmeticOp)


State 41

   40 ArithmeticOp: UnaryMinus •

    $default  reduce using rule 40 (ArithmeticOp)


State 42

   17 Assignment: • G_IDF SC_ASSIGN INT ';'
   18           | • G_IDF SC_ASSIGN FLOAT ';'
   19           | • G_IDF SC_ASSIGN BOOL ';'
   20 G_IDF: • G_IDF ',' IDF
   21      | • IDF
   26 Instructions: ε •  [KW_END, KW_Return, '}']
   27             | • Assignment Instructions
   28             | • For Instructions
   29             | • If Instructions
   30             | • Div Instructions
   30             | Div • Instructions
   31             | • Mult Instructions
   32             | • Add Instructions
   33             | • Sub Instructions
   34             | • Mod Instructions
   35             | • Increment ';' Instructions
   36             | • Decrement ';' Instructions
   37             | • FuncCall Instructions
   38             | • ProCall Instructions
   39 ArithmeticOp: • UnaryPlus
   40             | • UnaryMinus
   41             | • Div
   41             | Div •  ['+', '-', '*', '/', '%']
   42             | • Mult
   43             | • Add
   44             | • Sub
   45             | • Mod
   46 UnaryPlus: • '+' OpSide
   47 UnaryMinus: • '-' OpSide
   48 Div: • OpSide '/' OpSide
   49 Mult: • OpSide '*' OpSide
   50 Add: • OpSide '+' OpSide
   51 Sub: • OpSide '-' OpSide
   52 Mod: • OpSide '%' OpSide
   53 Increment: • IDF SC_INCR
   54 Decrement: • IDF SC_DECR
   63 OpSide: • IDF
   64       | • Num
   65       | • ArithmeticOp
   66       | • FuncCall
   69 Num: • INT
   70    | • FLOAT
   71 For: • KW_For '(' IDF SC_ASSIGN INT ';' Expression ';' Increment ')' '{' Instructions '}'
   72 If: • KW_If Condition '{' Instructions '}'
   73   | • KW_If Condition '{' Instructions '}' KW_Else '{' Instructions '}'
   74 FuncCall: • KW_Fc IDF '(' Args_Liste ')' ';'
   75 ProCall: • KW_Pc IDF '(' Args_Liste ')' ';'

    INT     shift, and go to state 27
    FLOAT   shift, and go to state 28
    IDF     shift, and go to state 29
    KW_For  shift, and go to state 30
    KW_If   shift, and go to state 31
    KW_Pc   shift, and go to state 32
    KW_Fc   shift, and go to state 33
    '+'     shift, and go to state 34
    '-'     shift, and go to state 35

    '+'       [reduce using rule 41 (ArithmeticOp)]
    '-'       [reduce using rule 41 (ArithmeticOp)]
    '*'       reduce using rule 41 (ArithmeticOp)
    '/'       reduce using rule 41 (ArithmeticOp)
    '%'       reduce using rule 41 (ArithmeticOp)
    $default  reduce using rule 26 (Instructions)

    Assignment    go to state 36
    G_IDF         go to state 37
    Instructions  go to state 79
    ArithmeticOp  go to state 39
    UnaryPlus     go to state 40
    UnaryMinus    go to state 41
    Div           go to state 42
    Mult          go to state 43
    Add           go to state 44
    Sub           go to state 45
    Mod           go to state 46
    Increment     go to state 47
    Decrement     go to state 48
    OpSide        go to state 49
    Num           go to state 50
    For           go to state 51
    If            go to state 52
    FuncCall      go to state 53
    ProCall       go to state 54

    shift/reduce conflict on token '+':
       41 ArithmeticOp: Div •
       46 UnaryPlus: • '+' OpSide
      First example: OpSide '/' OpSide Instructions
      Shift derivation
        Instructions
        ↳ 30: OpSide Instructions
                     ↳ 30: Div              Instructions
                           ↳ 48: '/' OpSide
      Second example: Instructions
      Reduce derivation
        Instructions
        ↳ 30: Instructions

    shift/reduce conflict on token '-':
       41 ArithmeticOp: Div •
       47 UnaryMinus: • '-' OpSide
      First example: OpSide '/' OpSide Instructions
      Shift derivation
        Instructions
        ↳ 30: OpSide Instructions
                     ↳ 30: Div              Instructions
                           ↳ 48: '/' OpSide
      Second example: Instructions
      Reduce derivation
        Instructions
        ↳ 30: Instructions



State 43

   17 Assignment: • G_IDF SC_ASSIGN INT ';'
   18           | • G_IDF SC_ASSIGN FLOAT ';'
   19           | • G_IDF SC_ASSIGN BOOL ';'
   20 G_IDF: • G_IDF ',' IDF
   21      | • IDF
   26 Instructions: ε •  [KW_END, KW_Return, '}']
   27             | • Assignment Instructions
   28             | • For Instructions
   29             | • If Instructions
   30             | • Div Instructions
   31             | • Mult Instructions
   31             | Mult • Instructions
   32             | • Add Instructions
   33             | • Sub Instructions
   34             | • Mod Instructions
   35             | • Increment ';' Instructions
   36             | • Decrement ';' Instructions
   37             | • FuncCall Instructions
   38             | • ProCall Instructions
   39 ArithmeticOp: • UnaryPlus
   40             | • UnaryMinus
   41             | • Div
   42             | • Mult
   42             | Mult •  ['+', '-', '*', '/', '%']
   43             | • Add
   44             | • Sub
   45             | • Mod
   46 UnaryPlus: • '+' OpSide
   47 UnaryMinus: • '-' OpSide
   48 Div: • OpSide '/' OpSide
   49 Mult: • OpSide '*' OpSide
   50 Add: • OpSide '+' OpSide
   51 Sub: • OpSide '-' OpSide
   52 Mod: • OpSide '%' OpSide
   53 Increment: • IDF SC_INCR
   54 Decrement: • IDF SC_DECR
   63 OpSide: • IDF
   64       | • Num
   65       | • ArithmeticOp
   66       | • FuncCall
   69 Num: • INT
   70    | • FLOAT
   71 For: • KW_For '(' IDF SC_ASSIGN INT ';' Expression ';' Increment ')' '{' Instructions '}'
   72 If: • KW_If Condition '{' Instructions '}'
   73   | • KW_If Condition '{' Instructions '}' KW_Else '{' Instructions '}'
   74 FuncCall: • KW_Fc IDF '(' Args_Liste ')' ';'
   75 ProCall: • KW_Pc IDF '(' Args_Liste ')' ';'

    INT     shift, and go to state 27
    FLOAT   shift, and go to state 28
    IDF     shift, and go to state 29
    KW_For  shift, and go to state 30
    KW_If   shift, and go to state 31
    KW_Pc   shift, and go to state 32
    KW_Fc   shift, and go to state 33
    '+'     shift, and go to state 34
    '-'     shift, and go to state 35

    '+'       [reduce using rule 42 (ArithmeticOp)]
    '-'       [reduce using rule 42 (ArithmeticOp)]
    '*'       reduce using rule 42 (ArithmeticOp)
    '/'       reduce using rule 42 (ArithmeticOp)
    '%'       reduce using rule 42 (ArithmeticOp)
    $default  reduce using rule 26 (Instructions)
